# biology-problems

./: .gitignore  AGENTS.md  Brewfile  CLAUDE.md  MANIFEST.in  PYTHON_STYLE.md  README.md  TEMPLATE.py  amplicon_copies.py  blood_type_offspring.py  blood_types.py  bptools.py  bptools_legacy.py  chi_square_choices.py  chi_square_errors.py  chi_square_hardy_weinberg.py  chymotrypsin_substrate.py  complement_directionless.py  complement_fill_blank.py  complement_sequence.py  complement_sequence_directionless.py  complement_sequence_prime.py  consensus_sequence_easy.py  crossinglib.py  deletionMutants.py  deletion_mutants.py  dihybrid_cross_gene_interactions.py  dihybrid_cross_gene_metabolics.py  dna_gel_migration.py  dna_percent.py  epistasis_inverse_test_cross.py  epistasis_test_cross.py  fret_overlap.py  fret_overlap_colors.py  gametes_unique.py  gametes_unique_cross_genotype.py  gametes_unique_cross_phenotype.py  gel_migration.py  gellib.py  geneMapping.py  (+60 more)
OTHER_REPOS/: biology-problems  webwork-pg-renderer  webwork-pgml-libretexts-adapt-texbook  webwork-pgml-linter  webwork-pgml-opl-training-set
OTHER_REPOS-do_not_commit/: PG_v2.17
biochem-problems/: chymotrypsin_substrate.py  dna_gel_migration-simple.py  fatty_acid_naming.py  fret_permute_colors.py  michaelis_menten_table-Km.py  michaelis_menten_table-inhibition.py  monosaccharide_Fischer_D_to_L_configuration.py  monosaccharide_Fischer_classification.py  monosaccharide_Haworth_D_to_L_configuration.py  monosaccharide_Haworth_furan_classification.py  monosaccharide_Haworth_pyran_classification.py  powerspectra.py  (+3 more)
(+1617 files in other folders)
